--- a/assets/css/STYLE_MANIFEST.json
+++ b/assets/css/STYLE_MANIFEST.json
@@ -1,5 +1,5 @@
 {
-  "version": "8.3",
+  "version": "8.3b",
   "tokens": {
     "bg": "#0b1020",
     "card": "#131a33",
@@ -17,7 +17,7 @@
       "hover_raise": "1px"
     },
     "pill": {
-      "rounded": "999px",
+      "rounded": "12px",
       "bg": "#0d1a3b",
       "border": "#25356e",
       "selected_border": "#3651a3"
@@ -28,6 +28,5 @@
       "gradient": "180deg, var(--card) to #0f1630"
     }
   },
-  "flow": "Welcome \u2192 Categories \u2192 Traits \u2192 Reflections \u2192 Results \u2192 Plan",
-  "notes": "Do not change component classes or tokens without updating this manifest."
+  "flow": "Welcome \u2192 Categories \u2192 Traits \u2192 Reflections \u2192 Results \u2192 Plan"
 }
