--- a/assets/config.json
+++ b/assets/config.json
@@ -1,7 +1,8 @@
 {
   "payhip": {
-    "starter": "https://payhip.com/b/STARTER-PRODUCT-ID",
-    "pro": "https://payhip.com/b/PRO-PRODUCT-ID",
-    "mastery": "https://payhip.com/b/MASTERY-PRODUCT-ID"
+    "starter": "https://payhip.com/b/GdfU7",
+    "pro": "https://payhip.com/b/knC1Z",
+    "mastery": "https://payhip.com/b/re4Hy",
+    "book": "https://payhip.com/b/N7Lvg"
   }
 }
