--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-store"
-        }
-      ]
-    }
+  "rewrites": [
+    { "source": "/", "destination": "/start.html" }
   ]
 }
